--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,13 @@ Pillow
 # for MOT evaluation and inference
 lapx
 motmetrics
-sklearn==0.0
+scikit-learn
 
 # for vehicleplate in deploy/pipeline/ppvehicle
 pyclipper
 
 # for culane data augumetation
 imgaug>=0.4.0
+
+# for license plate detection and recognition
+paddleocr>=2.7.0
